--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Test preview activity: temporal launcher para pruebas visuales -->
+        <activity
+            android:name=".TestPreviewActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Clase4">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
